--- a/index.html
+++ b/index.html
@@ -6,11 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Skip The Diet,</h1>
-    <h1>Just Eat Healthy</h1>
-    <h1>With Food Network</h1>
-    <p>Imagine you don't need a diet because we provide healthy and delicious food for you</p>
+  <section class="top-side flexible-container">
+    <div class="half-width">
+        <h1><span class="span">Skip</span> The Diet,</h1>
+        <h1>Just Eat Healthy</h1>
+        <h1>With Food Network</h1>
+        <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+        <a target="_blank" class="link-button" href="https://diets2go.co.uk/menus-pricing/?gclid=EAIaIQobChMI_djpjPLN8QIVFX8rCh2ehwCdEAAYAiAAEgIzTPD_BwE">Order Food</a>
+   </div>
+
+
+    <div class="half-width">
+        <img src="images/female/6667872_preview-removebg-preview.png" alt="Girl with food">
+    </div>
+  </section>
+
+  <section class="middle-side flexible-container">
+    <div class="half-width">
+        <img src="images/female/Person Image.png" alt="standing Girl">
+    </div>
+
+    <div>
+        <div class="half-width">
+            <h1>About Me</h1>
+            <p>Hi, I'm <b>Katrina Jade</b>. If you’re between the ages of 35 and 50, the choices you make regarding your health right now are more important than ever. In fact, the choices you make today can help support a healthy you now, and in the future.</p>
+            <a target="_blank" class="link-button" href="https://web.programming-hero.com/">Contact Me</a>
+       </div>
+    </div>
+
+
+  </section>
 </body>
 </html>
