--- a/index.html
+++ b/index.html
@@ -38,7 +38,25 @@
             <a target="_blank" class="link-button" href="https://web.programming-hero.com/">Contact Me</a>
        </div>
     </div>
+  </section>
 
+  <section class="bottom-side">
+      <h1 class="my-recipies">My Recipies</h1>
+      <p class="my-recipies">"My's recipes are mouth-watering, beautiful, and so nourishing for your body!</p>
+      <div class="flexible-container">
+        <div class="Recipie Recipie1">
+            <h1>Recipie Title</h1>
+            <p>Save money and time with our new product that contains more nitrous oxide! FreshWhip Professional Chargers offer higher qualities of N2O propellant to ensure the best results, every time.</p>
+        </div>
+        <div class="Recipie Recipie2">
+          <h1>Recipie Title</h1>
+          <p>Save money and time with our new product that contains more nitrous oxide! FreshWhip Professional Chargers offer higher qualities of N2O propellant to ensure the best results, every time.</p>
+        </div>
+        <div class="Recipie Recipie3">
+          <h1>Recipie Title</h1>
+          <p>Save money and time with our new product that contains more nitrous oxide! FreshWhip Professional Chargers offer higher qualities of N2O propellant to ensure the best results, every time.</p>
+        </div>
+      </div>
 
   </section>
 </body>
