bottom-part added

--- a/index.html
+++ b/index.html
@@ -44,20 +44,47 @@
       <h1 class="my-recipies">My Recipies</h1>
       <p class="my-recipies">"My's recipes are mouth-watering, beautiful, and so nourishing for your body!</p>
       <div class="flexible-container">
-        <div class="Recipie Recipie1">
-            <h1>Recipie Title</h1>
+        <div class="Recipie">
+            <img src="images/food/Project Cover.jpg" alt="">
+            <h3>Recipie Title</h3>
             <p>Save money and time with our new product that contains more nitrous oxide! FreshWhip Professional Chargers offer higher qualities of N2O propellant to ensure the best results, every time.</p>
         </div>
-        <div class="Recipie Recipie2">
-          <h1>Recipie Title</h1>
+        <div class="Recipie">
+            <img src="images/food/Project Cover.png" alt="">
+          <h3>Recipie Title</h3>
           <p>Save money and time with our new product that contains more nitrous oxide! FreshWhip Professional Chargers offer higher qualities of N2O propellant to ensure the best results, every time.</p>
         </div>
-        <div class="Recipie Recipie3">
-          <h1>Recipie Title</h1>
+        <div class="Recipie">
+            <img src="images/food/Project Cover1.jpg" alt="food">
+          <h3>Recipie Title</h3>
           <p>Save money and time with our new product that contains more nitrous oxide! FreshWhip Professional Chargers offer higher qualities of N2O propellant to ensure the best results, every time.</p>
         </div>
       </div>
 
-  </section>
+  <!-- </section>
+  <section class="in-line">
+    <div>
+        <div>
+            <h1>700k</h1>
+            <h6>Youtube Subscribers</h6>
+        </div>
+        <div>
+            <h1>2.4m</h1>
+            <h6>Instragram Followers</h6>
+        </div>
+        <div>
+            <h1>100k</h1>
+            <h6>Dribble Shot Likes</h6>
+        </div>
+    </div>
+  </section> -->
+  <footer>
+    <section>
+        <div>
+            <h1><span class="span">Food</span> Network</h1>
+            <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+        </div>
+    </section>
+  </footer>
 </body>
 </html>
