--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <section class="top-side flexible-container">
-    <div class="half-width">
+    <div class="half-width top">
         <h1><span class="span">Skip</span> The Diet,</h1>
         <h1>Just Eat Healthy</h1>
         <h1>With Food Network</h1>
@@ -79,12 +79,10 @@
     </div>
   </section> -->
   <footer>
-    <section>
         <div>
             <h1><span class="span">Food</span> Network</h1>
             <p>Eat healthy to live healthy. Live healthy to live happy.</p>
         </div>
-    </section>
   </footer>
 </body>
 </html>
